--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
+    "api": "^6.1.1",
+    "axios": "^1.6.5",
+    "dotenv": "^16.4.1",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.6.0",
-    "@google/generative-ai": "^0.1.3",
-    "axios": "^1.6.5"
-  },
-  "devDependencies": {
+    "openai": "^4.26.0"
   },
   "private": true
 }
